Fixed alignment for 13 inch laptops

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -86,7 +86,7 @@ body {
     #contents {
        padding: 10px;
        width: 100%;
-       margin: 50px 0 0 0;
+       margin: 30px 0 0 0;
        overflow: auto;
 
        #greetings {
@@ -110,12 +110,6 @@ body {
                 display: inline-block;
             }
         }  
-    }
-
-    #profileImage {
-        img {
-            width: 150px;
-        }
     }
 
         #greetings2 {
@@ -143,7 +137,7 @@ body {
         position: absolute;
         bottom: 0;
         width: 100%;
-        margin: 0;
+        margin: 30px 0 0 0s;
         padding: 10px;
         opacity: 0.4;
         text-align: center;
